Add basic metrics

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
+
 	
 	<section id="masthead" class="fullbg">
+	<button id="stats" class="dark-button">Stats</button>
 		<div class="center-both">
 			<h1 class="title">Some Cool Thing</h1>
-			<button class="button">Sign Up</button>
+			<button id="sign-up-button" class="button">Sign Up</button>
 		</div>
 	</section>
 
