--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 				<h3>Section Header Over Here</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eum porro fugiat corrupti delectus, a dolores omnis non, ab repellendus magni, maiores ad natus cumque. Officiis, explicabo sit accusantium nulla.</p>
 
-				<p><button class="dark-button top-margin" id="demo-button">View A Demo</button></p>
+				<p><button class="dark-button top-margin" id="demo-button">View A Demo</button>
+
+			</p>
 				
 			</div>
 	</div>	
@@ -63,6 +65,7 @@
 
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<script src="Chart.js"></script>
 	<script src="main.js"></script>
 
 </body>
