Tag on some responsive elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<!-- <div class="heatmap"> -->
+
 
 	<button id="stats" class="dark-button">Stats</button>
 	<section id="masthead" class="fullbg">
@@ -29,6 +31,8 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eum porro fugiat corrupti delectus, a dolores omnis non, ab repellendus magni, maiores ad natus cumque. Officiis, explicabo sit accusantium nulla.</p>
 
 				<p><button class="dark-button top-margin" id="demo-button">View A Demo</button>
+
+				
 
 			</p>
 				
@@ -65,8 +69,9 @@
 
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="Chart.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+	<script src="heatmap.min.js"></script>
 	<script src="main.js"></script>
-
+	<!-- </div> -->
 </body>
 </html>
